Реализован полный функционал приложения под платформы Android и iOS с использованием эмуляции загрузки данных.

--- a/Currency/Currency/Currency.csproj
+++ b/Currency/Currency/Currency.csproj
@@ -37,7 +37,10 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="BanksListPage.cs" />
-    <Compile Include="BankUIFrame.cs" />
+    <Compile Include="BanksListUIManager.cs" />
+    <Compile Include="BanksListUIManager.BankUIFrame.cs" />
+    <Compile Include="DummyFinancialInfoProvider.cs" />
+    <Compile Include="IBanksListUIManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +55,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Banks\Banks.csproj">
+      <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
+      <Name>Banks</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
